<resources>
    <string name="app_name">SafeMonitor -  Model Effi Test</string>
    <string name="normal">Safe</string>
    <string name="abnormal2">Unsafe_2</string>
    <string name="abnormal3">Unsafe_3</string>
    <string name="abnormal4">Unsafe_4</string>
    <string name="notice">Please put your face inside the box</string>
    <string name="normalDescription">Nothing to take care of</string>
    <string name="triggerText">Monitor Control</string>
    <string name="runInfo">Model Run Duration(ms):</string>
    <string name="loadInfo">Model Loaded with(ms) :</string>
    <string name="avgInfo">Model Avg Duration(ms):</string>
    <string name="avgValue" translatable="false">0</string>
    <string name="runValue" translatable="false">0</string>
    <string name="loadValue" translatable="false">0</string>
    <string name="RunTimes" translatable="false">0</string>
    <string name="GoogleNet">Load parameter of GoogleNet</string>
    <string name="ICPv2">Load parameter of InceptionV2（Unavailable）</string>
    <string name="VGG16">Load parameter of VGG16</string>
    <string name="modelName">Unloaded</string>
    <string name="ResNet50">Load parameter of ResNet50</string>
    <string name="warnOnQuickSwitch">Please wait at least one frame finished processing.</string>
    <string name="RunTimesInfo">Model Total Run Times：</string>
    <string name="loadModel">Load Model</string>
    <string name="loadFail">Fail to load file</string>
    <string name="loadFailContent">Fail to load Tensorflow model, please check the file you selected.</string>
    <string name="reselect">Reselect</string>
    <string name="cancle">cancle</string>
    <string name="setPara">Set the parameter</string>
</resources>
